# greek-db

./: Cargo.toml
data/: Greek-Summer-2021-word-list.csv  capitals2.txt  capitals3.txt  greek_for_db.csv
migrations/2022-06-28-220457_create_lsj_lemmata/: down.sql  up.sql
migrations/2022-06-29-173527_create_lsj_entry_keys/: down.sql  up.sql
migrations/2022-06-29-220439_create-asvocab/: down.sql  up.sql
migrations/2022-06-30-200307_create_gcse/: down.sql  up.sql
src/: lib.rs  schema.rs  search.rs  transliterate.rs
