[package]
name = "greek-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
diesel = { version = "1.4.8" , features = ["r2d2", "serde_json", "postgres"]}
regex = "1.5.6"
serde_json = "1.0.81"
serde = { version = "=1.0.120" , features = ["derive"] }
lazy_static = "1.4.0"
dotenv = "0.15.0"
nom = "7.1.1"
clap = { version = "3.1.18", features = ["derive"] }
